syntax = "proto3";
package apipb;

option java_package = "net.synchthia.api.systera";
option java_outer_classname = "SysteraProtos";

message Empty {}

/*
 * Systera API
 */
service Systera {
  rpc ActionStream (StreamRequest) returns (stream ActionStreamResponse) {}
  rpc Announce(AnnounceRequest) returns (Empty) {}
  rpc QuitStream(QuitStreamRequest) returns (Empty) {}

  rpc InitPlayerProfile (InitPlayerProfileRequest) returns (InitPlayerProfileResponse) {}
  rpc FetchPlayerProfile (FetchPlayerProfileRequest) returns (FetchPlayerProfileResponse) {}

  rpc SetPlayerServer (SetPlayerServerRequest) returns (Empty);
  rpc RemovePlayerServer (RemovePlayerServerRequest) returns (Empty);
}

/*
 * Stream API
 */
enum StreamType { QUIT = 0; DISPATCH = 1; }
message StreamRequest { string name = 1; StreamType type = 2; }
message ActionStreamResponse { StreamType type = 1; string target = 2; string cmd = 3; }

message AnnounceRequest { string target = 1; string message = 2; }
message QuitStreamRequest { string name = 1; }

/*
 * PLAYER PROFILE
 */
message InitPlayerProfileRequest { string playerUUID = 1; string playerName = 2; string playerIPAddress = 3; }
message InitPlayerProfileResponse { bool hasProfile = 1; }

message FetchPlayerProfileRequest { string playerUUID = 1; }
message FetchPlayerProfileResponse {
  map<string, bool> settings = 1;
}

message SetPlayerServerRequest { string playerUUID = 1; string serverName = 2; }
message RemovePlayerServerRequest { string playerUUID = 1; string serverName = 2; }